--- a/website/index.html
+++ b/website/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="w-full p-6 max-w-5xl mx-auto flex flex-row justify-end">
         <ul class="flex flex-row space-x-6">
-            <li>About</li>
-            <li>Documentation</li>
+            <li><a>About</a></li>
+            <li><a href='/docs/index.html'>Documentation</a></li>
         </ul>
     </header>
 
@@ -29,7 +29,7 @@
             e.preventDefault()
             destination = document.getElementById('destination').value
             
-            const response = await fetch('http://localhost:5000/predict', {
+            const response = await fetch('https://anais-ensta.herokuapp.com/predict', {
                 method: 'POST',
                 body: destination
             })
